--- a/styles.css
+++ b/styles.css
@@ -179,7 +179,7 @@ h3 {
 
 .card button{
   height: 40px;
-  width: 40px;
+  width: 40%;
   background-color: black;
   border: none;
   outline: none;
